# GraphIaC

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
dsl/: spec.md
dsl/fixtures/: api-lambda.giac  api-lambda.json  bucket.giac  bucket.json  cf-function.giac  cf-function.json  cognito.giac  cognito.json  err-basics.giac  err-basics.json  err-guards.giac  err-guards.json  err-unknown-edge.giac  err-unknown-edge.json  get-started.giac  get-started.json  guards.giac  guards.json  isa-subclass.giac  isa-subclass.json  lambda-dynamo.giac  lambda-dynamo.json  lambda-ui.giac  lambda-ui.json  ses.giac  ses.json  static-site-edge.giac  static-site-edge.json  static-site.giac  static-site.json
examples/: README.md
examples/cognito/: cognito.giac
examples/get-started/: README.md  setup.giac
examples/graphiac-ui/: README.md  build.sh  ui.giac
examples/graphiac-ui/lambda/: handler.py
examples/lambda-ui/: README.md  build.sh  ui.giac
examples/lambda-ui/lambda/: app.py  miniui.py
examples/lambda-ui/lambda/static/: app.js  index.html
examples/static-site/: index.html  infra.py  site.giac  url-rewrite.js
examples/team-state/: README.md  state-bucket.giac
src/GraphIaC/: __init__.py  __main__.py  db.py  deploy_policy.py  dsl.py  dsl_registry.py  guards.py  logs.py  main.py  model_map.py  models.py  server.py  setup.py  state.py
src/GraphIaC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/GraphIaC/aws/: apigateway.py  certificate.py  cloudfront.py  cloudwatch.py  cognito.py  deploy_role.py  dynamodb.py  ec2_sg.py  gbase.py  iam_policy.py  iam_role.py  lambda_dynamodb.py  lambda_func.py  old-ec2.py  route53.py  s3.py  ses.py  types.py
src/GraphIaC/aws/ec2/: .#listener.py  alb.py  listener.py  target_group.py
src/GraphIaC/web/: graphiac.js  graphiac.test.js  index.html  registry.js
tests/: conftest.py  test_cognito.py  test_deploy_policy.py  test_dsl.py  test_dsl_load.py  test_edge_reads.py  test_graph.py  test_guards.py  test_hosted_ui.py  test_lambda_ui.py  test_pydantic.py  test_server.py  test_state.py
tests/aws/: test_cognito.py  test_dynamodb.py
