[project]
name = "GraphIaC"
version = "0.0.1"
authors = [
  { name="Jeremy Schwartz", email="jerschwartz@gmail.com" },
]
description = "GraphIaC"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "networkx",
  "boto3",
  "pydantic",
  "colorlog",
  "deepdiff",
  "pytz"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"  # change if needed
line-length = 100

# Start small: basic sanity rules, import sorting, and a few common footguns.
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import sorting)
]

# Ignore rules that tend to create noise early in a legacy repo.
ignore = [
  "E501", # line length (let black/formatter handle later)
]

# Optional: exclude generated/venv/build dirs
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
]

[tool.black]
line-length = 100
target-version = ["py313"]