[project]
name = "GraphIaC"
version = "0.0.1"
authors = [
  { name="Jeremy Schwartz", email="jerschwartz@gmail.com" },
]
description = "GraphIaC"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "networkx",
  "boto3",
  "pydantic",
  "colorlog",
  "deepdiff",
  "pytz"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "moto[all]",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "T201", # disallow print()
]
ignore = [
  "E501", # line length — formatter handles this
]